--- a/app/src/main/res/layout/activity_rutas_bus.xml
+++ b/app/src/main/res/layout/activity_rutas_bus.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    >
     <TextView
         android:id="@+id/simpleTextView"
         android:layout_width="fill_parent"
@@ -262,7 +264,7 @@
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="629dp" />
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
 
 
 
