--- a/app/src/main/res/layout/activity_asientos_bus.xml
+++ b/app/src/main/res/layout/activity_asientos_bus.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
     android:orientation="vertical">
 
     <TextView
@@ -17,10 +18,6 @@
         tools:layout_editor_absoluteX="179dp"
         tools:layout_editor_absoluteY="0dp" />
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
     <Button
         android:id="@+id/btnAceptar"
         android:layout_width="229dp"
@@ -30,11 +27,13 @@
         tools:layout_editor_absoluteX="182dp"
         tools:layout_editor_absoluteY="451dp" />
 
-    <ImageView
-        android:layout_width="179dp"
-        android:layout_height="match_parent"
-        android:src="@drawable/mapabusooficial" />
-
-
+    <GridLayout
+        android:id="@+id/gridLayoutBuses"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@drawable/mapabusooficial"
+        android:columnCount="4">
+    </GridLayout>
 
 </LinearLayout>
