--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -10,9 +10,9 @@
 
     <ImageView
         android:layout_width="131dp"
-        android:layout_height="308dp"
-        android:src="@drawable/logo"
-        android:layout_gravity="center_horizontal" />
+        android:layout_height="224dp"
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/logo" />
 
     <LinearLayout
         android:layout_width="match_parent"
