--- a/app/src/main/res/layout/drawer_layout.xml
+++ b/app/src/main/res/layout/drawer_layout.xml
@@ -43,6 +43,13 @@
         android:text="Información"
         android:onClick="goToInformation"
         android:layout_margin="10dp"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorExtraButtons"
+        android:text="Configurar Cuenta"
+        android:onClick="goToSettings"
+        android:layout_margin="10dp"/>
 
     <Button
         android:layout_width="match_parent"
