--- a/app/src/main/res/layout/activity_opciones_cuenta.xml
+++ b/app/src/main/res/layout/activity_opciones_cuenta.xml
@@ -87,7 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:text="Editar Contraseña"
-            android:onClick="cambiarContrasena"
+            android:onClick="cambiarPassword"
             />
 
         <Button
